--- a/FrontTW/src/app/app.component.html
+++ b/FrontTW/src/app/app.component.html
@@ -11,10 +11,10 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <!--se sustituyo href por routerLink ya que el ultimo en caso de recargar la pagina routerLink "guarda" lo que pueda haber dentro de un campo vacio-->
-              <a class="nav-link "  routerLink="/estudiantes">Alumnos</a>
+              <a class="nav-link "  href="/Alumnos/add">Alumnos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="/maestros">Materias</a>
+              <a class="nav-link" routerLink="/materias">Materias</a>
             </li>
           </ul>
         </div>
