--- a/FrontTW/src/app/app.component.html
+++ b/FrontTW/src/app/app.component.html
@@ -11,7 +11,7 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <!--se sustituyo href por routerLink ya que el ultimo en caso de recargar la pagina routerLink "guarda" lo que pueda haber dentro de un campo vacio-->
-              <a class="nav-link "  href="/Alumnos/add">Alumnos</a>
+              <a class="nav-link "  rouerLink="/alumnos">Alumnos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" routerLink="/materias">Materias</a>
@@ -24,3 +24,5 @@
     
     </div>
 </div>
+
+
